tests/sources/invalid/generators/generator_def_errors.fire
// Malformed generator type expressions and yield statements. Generators are
// no longer a distinct declaration form -- `fn name(...) -> generator<T> {
// ... }` is an ordinary function whose return type happens to be
// `generator<T>` -- so malformed name/params/body shapes are already covered
// generically by function_def_syntax_errors.fire. What's still specific to
// generators is `generator<T>`'s own type-expression syntax (parsed by
// ParserBase._parse_type_expression's GENERATOR branch) and `yield`.

// Missing '<' after 'generator'
fn g1() -> generator int32 {  //~ ERROR FS-PARSE-0010 @22
    yield 1;
}

// Missing yield type
fn g2() -> generator<> {  //~ ERROR FS-PARSE-0010 @22
    yield 1;
}

// Missing '>' after yield type
fn g3() -> generator<int32 {  //~ ERROR FS-PARSE-0010 @28
    yield 1;
}

// yield with no expression
fn g10() -> generator<int32> {
    yield;  //~ ERROR FS-PARSE-0012 @10
//~^ ERROR FS-PARSE-0010 @11
}
